--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,9 @@
   /* Breakpoints */
   --breakpoint-xxs: 360px;
   --breakpoint-xs: 480px;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
   --breakpoint-xl: 1600px;
 
   /* Font Sizes */
